--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,22 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
             "program": "${file}",
+            // "program": "D:\\OneDrive - Universidad de Chile\\CancerProjectApril\\Main.py",
+            "console": "integratedTerminal",
+            "justMyCode": false
+        },
+        {
+            "name": "Python: Main.py",
+            "type": "python",
+            "request": "launch",
+            // "program": "${file}",
+            "program": "D:\\OneDrive - Universidad de Chile\\CancerProjectApril\\Main.py",
             "console": "integratedTerminal",
             "justMyCode": false
         }
